# pytest-mock-leak-example

./: pyproject.toml
tests/: test_widget_creator.py
widget_app/: widget_creator.py  widget_utils.py
